fix: scrollbar changing width

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -2,6 +2,9 @@
     font-family: superwoobly;
     src: url(../Assets/SuperWoobly-8MJlz.ttf);
 }
+html {
+    width: 100vw;
+}
 *{
     margin: 0;
     padding: 0;
